--- a/src/Modules/Laser.Orchard.StartupConfig/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.StartupConfig/App_Data/Localization/it-IT/orchard.module.po
@@ -1757,6 +1757,10 @@ msgid "Invalid User"
 msgstr "Utente non valido"
 
 msgctxt "Laser.Orchard.StartupConfig.Services.UtilsServices"
+msgid "Invalid value for username or password"
+msgstr "Valore non valido per nome utente o password"
+
+msgctxt "Laser.Orchard.StartupConfig.Services.UtilsServices"
 msgid "It seems you have not yet accepted the required policies"
 msgstr "Sembra che tu non abbia ancora accettato la policy associata."
 
@@ -1775,6 +1779,10 @@ msgstr "Eseguito con successo"
 msgctxt "Laser.Orchard.StartupConfig.Services.UtilsServices"
 msgid "Thank you for registering. We sent you an e-mail with instructions to enable your account."
 msgstr "Grazie per esserti registrato. Ti abbiamo inviato una e-mail con le istruzioni per attivare la tua utenza."
+
+msgctxt "Laser.Orchard.StartupConfig.Services.UtilsServices"
+msgid "The password is expired"
+msgstr "La password è scaduta"
 
 msgctxt "Laser.Orchard.StartupConfig.Services.UtilsServices"
 msgid "UnAuthorized Action"
