--- a/src/Modules/Laser.Orchard.Questionnaires/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.Questionnaires/App_Data/Localization/it-IT/orchard.module.po
@@ -785,6 +785,10 @@ msgid "Cannot update questionnaire....... "
 msgstr "Non è possibile aggiornare il questionario......."
 
 msgctxt "Laser.Orchard.Questionnaires.Drivers.QuestionnairePartDriver"
+msgid "Cannot update questionnaire: "
+msgstr "Impossibile aggiornare il questionario:"
+
+msgctxt "Laser.Orchard.Questionnaires.Drivers.QuestionnairePartDriver"
 msgid "You have to be logged in, before answering a questionnaire!"
 msgstr "Devi essere autenticato per poter rispondere al nostro questionario!"
 
@@ -881,8 +885,24 @@ msgid "Statistics"
 msgstr "Statistiche"
 
 msgctxt "Laser.Orchard.Questionnaires.Services.QuestionnairesServices"
+msgid "Cannot delete the answer: \"{0}\" since it has already been selected in one or more user answers. The answer has been set to \"not visible\". {1} the content to accept these changes."
+msgstr "Impossibile cancellare la risposta: \"{0}"\ in quanto già selezionata in una o più risposte utente. La risposta è stata impostata come \"invisibile\". Per accettare la modifica {1} il contenuto."
+
+msgctxt "Laser.Orchard.Questionnaires.Services.QuestionnairesServices"
+msgid "Cannot delete the question: \"{0}\" since it already contains one or more user answers.The question has been set to \"not visible\". {1} the content to accept these changes."
+msgstr "Impossibile cancellare la domanda \"{0}\" in quanto contiene già una o più risposte utente. La domanda è stata impostata come \"invisibile\". Per accettare la modifica premere {1}."
+
+msgctxt "Laser.Orchard.Questionnaires.Services.QuestionnairesServices"
 msgid "Operation Fail: Questionnaire already filled"
 msgstr "Operazione fallita: questionario già compilato"
+
+msgctxt "Laser.Orchard.Questionnaires.Services.QuestionnairesServices"
+msgid "Publish"
+msgstr "Pubblica"
+
+msgctxt "Laser.Orchard.Questionnaires.Services.QuestionnairesServices"
+msgid "Save"
+msgstr "Salva"
 
 msgctxt "Laser.Orchard.Questionnaires.Services.to"
 msgid "Operation Fail: Questionnaire already filled"
