--- a/src/Modules/Laser.Orchard.PaymentGateway/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.PaymentGateway/App_Data/Localization/it-IT/orchard.module.po
@@ -204,6 +204,10 @@ msgctxt "~/Modules/Laser.Orchard.PaymentGateway/Views/PaymentInfo/All.cshtml"
 msgid "User ID"
 msgstr "ID Utente"
 
+msgctxt "~/Modules/Laser.Orchard.PaymentGateway/Views/PaymentInfo/All.cshtml"
+msgid "Waiting for payment"
+msgstr "In attesa del pagamento"
+
 msgctxt "~/Modules/Laser.Orchard.PaymentGateway/Views/PaymentInfo/Index.cshtml"
 msgid "Abandoned"
 msgstr "Annullata"
@@ -255,6 +259,10 @@ msgstr "Causale"
 msgctxt "~/Modules/Laser.Orchard.PaymentGateway/Views/PaymentInfo/Index.cshtml"
 msgid "Transaction ID"
 msgstr "ID Transazione"
+
+msgctxt "~/Modules/Laser.Orchard.PaymentGateway/Views/PaymentInfo/Index.cshtml"
+msgid "Waiting for payment"
+msgstr "In attesa del pagamento"
 
 msgctxt "~/Modules/Laser.Orchard.PaymentGateway/Views/PosList.cshtml"
 msgid "Loading valid payment methods. Please wait."
